// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden engine output snapshots > stable values: commercial per-sf program 1`] = `
{
  "allInDscr": 0.8356,
  "annualDebtService": 4095800.76,
  "breakEvenOccupancyPct": 96.5433,
  "cashOnCashPct": -0.3362,
  "costPerUnit": 0,
  "cumulativeCashShortfall": 968587.3836,
  "debtYieldPct": 6.3381,
  "developmentProfit": -19634021.4286,
  "developmentSpreadBps": -121.5174,
  "dscr": 0.8356,
  "effectiveOccupancyPct": 94,
  "egi": 5347800,
  "equity": 26000000,
  "equityMultiple": 0.4188,
  "exitValue": 65192228.5714,
  "gpEquityMultiple": 0,
  "gpIrrPct": NaN,
  "gpPromote": 0,
  "gpr": 5370000,
  "interestOnlyDscr": 0.9751,
  "interestReserve": 4826250,
  "irrPct": -10.8038,
  "leaseUpAdjustedIrrPct": -10.8038,
  "loanPayoffAtExit": 52065310.73,
  "lpEquityMultiple": 0.4188,
  "lpIrrPct": -10.8038,
  "lpPreferredReturn": 0,
  "ltcPct": 63.6595,
  "mezzDebtService": 0,
  "netSaleBeforeDebt": 63888384,
  "noi": 3422592,
  "opex": 1925208,
  "profitOnCostPct": -23.1462,
  "requiredEquity": 30826250,
  "saleProceedsToEquity": 11823073.27,
  "seniorDebtService": 4095800.76,
  "seniorDscr": 0.8356,
  "tdc": 84826250,
  "tdcPreFinancing": 80000000,
  "totalDebt": 54000000,
  "totalDebtService": 4095800.76,
  "yieldOnCostPct": 4.0348,
}
`;

exports[`golden engine output snapshots > stable values: distressed (cap expansion, soft rents) 1`] = `
{
  "allInDscr": 0.5373,
  "annualDebtService": 4702586.04,
  "breakEvenOccupancyPct": 131.5104,
  "cashOnCashPct": -5.7818,
  "costPerUnit": 427706.25,
  "cumulativeCashShortfall": 8603688.1407,
  "debtYieldPct": 4.0754,
  "developmentProfit": -57466583.3333,
  "developmentSpreadBps": -604.6197,
  "dscr": 0.5373,
  "effectiveOccupancyPct": 80,
  "egi": 3948000,
  "equity": 26000000,
  "equityMultiple": 0,
  "exitValue": 28074666.6667,
  "gpEquityMultiple": 0,
  "gpIrrPct": NaN,
  "gpPromote": 0,
  "gpr": 4560000,
  "interestOnlyDscr": 0.627,
  "interestReserve": 5541250,
  "irrPct": NaN,
  "leaseUpAdjustedIrrPct": NaN,
  "loanPayoffAtExit": 59778690.16,
  "lpEquityMultiple": 0,
  "lpIrrPct": NaN,
  "lpPreferredReturn": 0,
  "ltcPct": 72.4797,
  "mezzDebtService": 0,
  "netSaleBeforeDebt": 27513173.3333,
  "noi": 2526720,
  "opex": 1421280,
  "profitOnCostPct": -67.18,
  "requiredEquity": 23541250,
  "saleProceedsToEquity": -32265516.8267,
  "seniorDebtService": 4702586.04,
  "seniorDscr": 0.5373,
  "tdc": 85541250,
  "tdcPreFinancing": 80000000,
  "totalDebt": 62000000,
  "totalDebtService": 4702586.04,
  "yieldOnCostPct": 2.9538,
}
`;

exports[`golden engine output snapshots > stable values: fully amortizing senior 1`] = `
{
  "allInDscr": 1.0692,
  "annualDebtService": 4095800.76,
  "breakEvenOccupancyPct": 87.6392,
  "cashOnCashPct": 1.0898,
  "costPerUnit": 424131.25,
  "cumulativeCashShortfall": 0,
  "debtYieldPct": 8.1095,
  "developmentProfit": -1414135.7143,
  "developmentSpreadBps": -8.7523,
  "dscr": 1.0692,
  "effectiveOccupancyPct": 94,
  "egi": 6842400,
  "equity": 26000000,
  "equityMultiple": 1.3163,
  "exitValue": 83412114.2857,
  "gpEquityMultiple": 0,
  "gpIrrPct": NaN,
  "gpPromote": 0,
  "gpr": 6960000,
  "interestOnlyDscr": 1.2476,
  "interestReserve": 4826250,
  "irrPct": 3.802,
  "leaseUpAdjustedIrrPct": 3.802,
  "loanPayoffAtExit": 50549928.01,
  "lpEquityMultiple": 1.3163,
  "lpIrrPct": 3.802,
  "lpPreferredReturn": 0,
  "ltcPct": 63.6595,
  "mezzDebtService": 0,
  "netSaleBeforeDebt": 81743872,
  "noi": 4379136,
  "opex": 2463264,
  "profitOnCostPct": -1.6671,
  "requiredEquity": 30826250,
  "saleProceedsToEquity": 31193943.99,
  "seniorDebtService": 4095800.76,
  "seniorDscr": 1.0692,
  "tdc": 84826250,
  "tdcPreFinancing": 80000000,
  "totalDebt": 54000000,
  "totalDebtService": 4095800.76,
  "yieldOnCostPct": 5.1625,
}
`;

exports[`golden engine output snapshots > stable values: interest-only senior 1`] = `
{
  "allInDscr": 1.0692,
  "annualDebtService": 4095800.76,
  "breakEvenOccupancyPct": 74.4881,
  "cashOnCashPct": 3.3428,
  "costPerUnit": 424131.25,
  "cumulativeCashShortfall": 0,
  "debtYieldPct": 8.1095,
  "developmentProfit": -1414135.7143,
  "developmentSpreadBps": -8.7523,
  "dscr": 1.0692,
  "effectiveOccupancyPct": 94,
  "egi": 6842400,
  "equity": 26000000,
  "equityMultiple": 1.2962,
  "exitValue": 83412114.2857,
  "gpEquityMultiple": 0,
  "gpIrrPct": NaN,
  "gpPromote": 0,
  "gpr": 6960000,
  "interestOnlyDscr": 1.2476,
  "interestReserve": 4826250,
  "irrPct": 3.6795,
  "leaseUpAdjustedIrrPct": 3.6795,
  "loanPayoffAtExit": 54000000,
  "lpEquityMultiple": 1.2962,
  "lpIrrPct": 3.6795,
  "lpPreferredReturn": 0,
  "ltcPct": 63.6595,
  "mezzDebtService": 0,
  "netSaleBeforeDebt": 81743872,
  "noi": 4379136,
  "opex": 2463264,
  "profitOnCostPct": -1.6671,
  "requiredEquity": 30826250,
  "saleProceedsToEquity": 27743872,
  "seniorDebtService": 4095800.76,
  "seniorDscr": 1.0692,
  "tdc": 84826250,
  "tdcPreFinancing": 80000000,
  "totalDebt": 54000000,
  "totalDebtService": 4095800.76,
  "yieldOnCostPct": 5.1625,
}
`;

exports[`golden engine output snapshots > stable values: lease-up absorption (monthly) 1`] = `
{
  "allInDscr": 1.0692,
  "annualDebtService": 4095800.76,
  "breakEvenOccupancyPct": 74.4881,
  "cashOnCashPct": 3.3428,
  "costPerUnit": 424131.25,
  "cumulativeCashShortfall": 0,
  "debtYieldPct": 8.1095,
  "developmentProfit": -1414135.7143,
  "developmentSpreadBps": -8.7523,
  "dscr": 1.0692,
  "effectiveOccupancyPct": 94,
  "egi": 6842400,
  "equity": 26000000,
  "equityMultiple": 1.3031,
  "exitValue": 83412114.2857,
  "gpEquityMultiple": 0,
  "gpIrrPct": NaN,
  "gpPromote": 0,
  "gpr": 6960000,
  "interestOnlyDscr": 1.2476,
  "interestReserve": 4826250,
  "irrPct": 3.7265,
  "leaseUpAdjustedIrrPct": 3.9507,
  "loanPayoffAtExit": 52065310.73,
  "lpEquityMultiple": 1.3031,
  "lpIrrPct": 3.7265,
  "lpPreferredReturn": 0,
  "ltcPct": 63.6595,
  "mezzDebtService": 0,
  "netSaleBeforeDebt": 81743872,
  "noi": 4379136,
  "opex": 2463264,
  "profitOnCostPct": -1.6671,
  "requiredEquity": 30826250,
  "saleProceedsToEquity": 29678561.27,
  "scheduleConstructionInterest": 4826250,
  "scheduleLeveredIrrPct": 3.9493,
  "seniorDebtService": 4095800.76,
  "seniorDscr": 1.0692,
  "tdc": 84826250,
  "tdcPreFinancing": 80000000,
  "totalDebt": 54000000,
  "totalDebtService": 4095800.76,
  "yieldOnCostPct": 5.1625,
}
`;

exports[`golden engine output snapshots > stable values: lp/gp promote waterfall 1`] = `
{
  "allInDscr": 1.0692,
  "annualDebtService": 4095800.76,
  "breakEvenOccupancyPct": 74.4881,
  "cashOnCashPct": 3.3428,
  "costPerUnit": 424131.25,
  "cumulativeCashShortfall": 0,
  "debtYieldPct": 8.1095,
  "developmentProfit": -1414135.7143,
  "developmentSpreadBps": -8.7523,
  "dscr": 1.0692,
  "effectiveOccupancyPct": 94,
  "egi": 6842400,
  "equity": 26000000,
  "equityMultiple": 1.3031,
  "exitValue": 83412114.2857,
  "gpEquityMultiple": 1.3031,
  "gpIrrPct": 3.7265,
  "gpPromote": 0,
  "gpr": 6960000,
  "interestOnlyDscr": 1.2476,
  "interestReserve": 4826250,
  "irrPct": 3.7265,
  "leaseUpAdjustedIrrPct": 3.7265,
  "loanPayoffAtExit": 52065310.73,
  "lpEquityMultiple": 1.3031,
  "lpIrrPct": 3.7265,
  "lpPreferredReturn": 7091518.563,
  "ltcPct": 63.6595,
  "mezzDebtService": 0,
  "netSaleBeforeDebt": 81743872,
  "noi": 4379136,
  "opex": 2463264,
  "profitOnCostPct": -1.6671,
  "requiredEquity": 30826250,
  "saleProceedsToEquity": 29678561.27,
  "seniorDebtService": 4095800.76,
  "seniorDscr": 1.0692,
  "tdc": 84826250,
  "tdcPreFinancing": 80000000,
  "totalDebt": 54000000,
  "totalDebtService": 4095800.76,
  "yieldOnCostPct": 5.1625,
}
`;

exports[`golden engine output snapshots > stable values: maple heights (marginal) 1`] = `
{
  "allInDscr": 1.0961,
  "annualDebtService": 1987509.96,
  "breakEvenOccupancyPct": 72.2789,
  "cashOnCashPct": 3.5028,
  "costPerUnit": 354166.6667,
  "cumulativeCashShortfall": 0,
  "debtYieldPct": 7.8861,
  "developmentProfit": 1070800,
  "developmentSpreadBps": 12.5976,
  "dscr": 1.0961,
  "effectiveOccupancyPct": 95,
  "egi": 3351600,
  "equity": 14875000,
  "equityMultiple": 1.107,
  "exitValue": 43570800,
  "gpEquityMultiple": 0,
  "gpIrrPct": NaN,
  "gpPromote": 0,
  "gpr": 3528000,
  "interestOnlyDscr": 1.3144,
  "interestReserve": 2000000,
  "irrPct": 2.9474,
  "leaseUpAdjustedIrrPct": 2.9474,
  "loanPayoffAtExit": 27625000,
  "lpEquityMultiple": 1.107,
  "lpIrrPct": 2.9474,
  "lpPreferredReturn": 0,
  "ltcPct": 65,
  "mezzDebtService": 0,
  "netSaleBeforeDebt": 43570800,
  "noi": 2178540,
  "opex": 1173060,
  "profitOnCostPct": 2.5195,
  "requiredEquity": 14875000,
  "saleProceedsToEquity": 15945800,
  "seniorDebtService": 1987509.96,
  "seniorDscr": 1.0961,
  "tdc": 42500000,
  "tdcPreFinancing": 40500000,
  "totalDebt": 27625000,
  "totalDebtService": 1987509.96,
  "yieldOnCostPct": 5.126,
}
`;

exports[`golden engine output snapshots > stable values: mezzanine tranche 1`] = `
{
  "allInDscr": 0.9159,
  "annualDebtService": 4095800.76,
  "breakEvenOccupancyPct": 89.305,
  "cashOnCashPct": 0.8044,
  "costPerUnit": 428668.75,
  "cumulativeCashShortfall": 85151.2656,
  "debtYieldPct": 8.1095,
  "developmentProfit": -2321635.7143,
  "developmentSpreadBps": -14.2168,
  "dscr": 1.0692,
  "effectiveOccupancyPct": 94,
  "egi": 6842400,
  "equity": 26000000,
  "equityMultiple": 0.9459,
  "exitValue": 83412114.2857,
  "gpEquityMultiple": 0,
  "gpIrrPct": NaN,
  "gpPromote": 0,
  "gpr": 6960000,
  "interestOnlyDscr": 1.2476,
  "interestReserve": 5733750,
  "irrPct": -0.7463,
  "leaseUpAdjustedIrrPct": -0.7463,
  "loanPayoffAtExit": 57974550.7,
  "lpEquityMultiple": 0.9459,
  "lpIrrPct": -0.7463,
  "lpPreferredReturn": 0,
  "ltcPct": 69.9841,
  "mezzDebtService": 685672.8,
  "netSaleBeforeDebt": 81743872,
  "noi": 4379136,
  "opex": 2463264,
  "profitOnCostPct": -2.708,
  "requiredEquity": 25733750,
  "saleProceedsToEquity": 23769321.3,
  "seniorDebtService": 4095800.76,
  "seniorDscr": 1.0692,
  "tdc": 85733750,
  "tdcPreFinancing": 80000000,
  "totalDebt": 60000000,
  "totalDebtService": 4781473.56,
  "yieldOnCostPct": 5.1078,
}
`;

exports[`golden engine output snapshots > stable values: refinance mid-hold (monthly) 1`] = `
{
  "allInDscr": 1.0692,
  "annualDebtService": 4095800.76,
  "breakEvenOccupancyPct": 74.4881,
  "cashOnCashPct": 3.3428,
  "costPerUnit": 424131.25,
  "cumulativeCashShortfall": 0,
  "debtYieldPct": 8.1095,
  "developmentProfit": -1414135.7143,
  "developmentSpreadBps": -8.7523,
  "dscr": 1.0692,
  "effectiveOccupancyPct": 94,
  "egi": 6842400,
  "equity": 26000000,
  "equityMultiple": 1.4543,
  "exitValue": 83412114.2857,
  "gpEquityMultiple": 0,
  "gpIrrPct": NaN,
  "gpPromote": 0,
  "gpr": 6960000,
  "interestOnlyDscr": 1.2476,
  "interestReserve": 4826250,
  "irrPct": 4.2578,
  "leaseUpAdjustedIrrPct": 4.2578,
  "loanPayoffAtExit": 50549928.01,
  "lpEquityMultiple": 1.4543,
  "lpIrrPct": 4.2578,
  "lpPreferredReturn": 0,
  "ltcPct": 63.6595,
  "mezzDebtService": 0,
  "netSaleBeforeDebt": 81743872,
  "noi": 4379136,
  "opex": 2463264,
  "postRefiDscr": 1.1854,
  "profitOnCostPct": -1.6671,
  "refiCashOut": 217874.2857,
  "refiNewAnnualDebtService": 3694117.56,
  "refiNewLoanAmount": 54217874.2857,
  "requiredEquity": 30826250,
  "saleProceedsToEquity": 31193943.99,
  "scheduleConstructionInterest": 4826250,
  "scheduleLeveredIrrPct": 5.3178,
  "seniorDebtService": 4095800.76,
  "seniorDscr": 1.0692,
  "tdc": 84826250,
  "tdcPreFinancing": 80000000,
  "totalDebt": 54000000,
  "totalDebtService": 4095800.76,
  "yieldOnCostPct": 5.1625,
}
`;

exports[`golden engine output snapshots > stable values: stabilized mid-rise (annual) 1`] = `
{
  "allInDscr": 1.0692,
  "annualDebtService": 4095800.76,
  "breakEvenOccupancyPct": 74.4881,
  "cashOnCashPct": 3.3428,
  "costPerUnit": 424131.25,
  "cumulativeCashShortfall": 0,
  "debtYieldPct": 8.1095,
  "developmentProfit": -1414135.7143,
  "developmentSpreadBps": -8.7523,
  "dscr": 1.0692,
  "effectiveOccupancyPct": 94,
  "egi": 6842400,
  "equity": 26000000,
  "equityMultiple": 1.3031,
  "exitValue": 83412114.2857,
  "gpEquityMultiple": 0,
  "gpIrrPct": NaN,
  "gpPromote": 0,
  "gpr": 6960000,
  "interestOnlyDscr": 1.2476,
  "interestReserve": 4826250,
  "irrPct": 3.7265,
  "leaseUpAdjustedIrrPct": 3.7265,
  "loanPayoffAtExit": 52065310.73,
  "lpEquityMultiple": 1.3031,
  "lpIrrPct": 3.7265,
  "lpPreferredReturn": 0,
  "ltcPct": 63.6595,
  "mezzDebtService": 0,
  "netSaleBeforeDebt": 81743872,
  "noi": 4379136,
  "opex": 2463264,
  "profitOnCostPct": -1.6671,
  "requiredEquity": 30826250,
  "saleProceedsToEquity": 29678561.27,
  "seniorDebtService": 4095800.76,
  "seniorDscr": 1.0692,
  "tdc": 84826250,
  "tdcPreFinancing": 80000000,
  "totalDebt": 54000000,
  "totalDebtService": 4095800.76,
  "yieldOnCostPct": 5.1625,
}
`;

exports[`golden engine output snapshots > stable values: stabilized mid-rise (monthly spine) 1`] = `
{
  "allInDscr": 1.0692,
  "annualDebtService": 4095800.76,
  "breakEvenOccupancyPct": 74.4881,
  "cashOnCashPct": 3.3428,
  "costPerUnit": 424131.25,
  "cumulativeCashShortfall": 0,
  "debtYieldPct": 8.1095,
  "developmentProfit": -1414135.7143,
  "developmentSpreadBps": -8.7523,
  "dscr": 1.0692,
  "effectiveOccupancyPct": 94,
  "egi": 6842400,
  "equity": 26000000,
  "equityMultiple": 1.3031,
  "exitValue": 83412114.2857,
  "gpEquityMultiple": 0,
  "gpIrrPct": NaN,
  "gpPromote": 0,
  "gpr": 6960000,
  "interestOnlyDscr": 1.2476,
  "interestReserve": 4826250,
  "irrPct": 3.7265,
  "leaseUpAdjustedIrrPct": 3.7265,
  "loanPayoffAtExit": 52065310.73,
  "lpEquityMultiple": 1.3031,
  "lpIrrPct": 3.7265,
  "lpPreferredReturn": 0,
  "ltcPct": 63.6595,
  "mezzDebtService": 0,
  "netSaleBeforeDebt": 81743872,
  "noi": 4379136,
  "opex": 2463264,
  "profitOnCostPct": -1.6671,
  "requiredEquity": 30826250,
  "saleProceedsToEquity": 29678561.27,
  "scheduleConstructionInterest": 4826250,
  "scheduleLeveredIrrPct": 3.7265,
  "seniorDebtService": 4095800.76,
  "seniorDscr": 1.0692,
  "tdc": 84826250,
  "tdcPreFinancing": 80000000,
  "totalDebt": 54000000,
  "totalDebtService": 4095800.76,
  "yieldOnCostPct": 5.1625,
}
`;
